src/objects/AR_Number__c.object
<CustomObject>
    <description>Object for migration of AR numbers associated with an account from Sage</description>
    <fields>
        <fullName>AR_Status__c</fullName>
        <description>This is the Status of the AR Number for a specific Account</description>
        <label>AR Status</label>
        <picklist>
            <picklistValues>
                <fullName>10-Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99 - Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account with which an AR number is associated</description>
        <inlineHelpText>Populate the account with which an AR number is associated</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AR Numbers</relationshipLabel>
        <relationshipName>AR_Numbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the data was migrated from the Course Booker database</description>
        <label>Migrated__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_ACC_ID__c</fullName>
        <description>This is the unique identifier ffom the Accounts table in Course Booker for this data</description>
        <externalId>true</externalId>
        <label>PK_CB_ACC_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sage_AR_Number__c</fullName>
        <description>The legacy AR number from the Sage System</description>
        <inlineHelpText>The legacy AR number from the Sage System</inlineHelpText>
        <label>Sage AR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cannot deploy profiles via change sets without adding a component to the change set, this field was added to allow this.</description>
        <label>Temp</label>
        <type>Checkbox</type>
    </fields>
    <label>AR Number</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>AR Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>